--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
   "name": "concentration",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
-  },
+  "private": "false",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack --mode development --watch",
+    "dev": "webpack-dev-server --color --mode development --open --hot",
+    "build": "webpack --mode production",
+    "deploy": "npm run build && surge dist baseball-roster.surge.sh"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@babel/core": "7.4.4",
+    "@babel/preset-env": "7.1.5",
+    "@babel/preset-react": "7.0.0",
+    "autoprefixer": "9.3.1",
+    "babel-loader": "8.0.4",
+    "css-loader": "1.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "node-sass": "4.10.0",
+    "prop-types": "15.6.2",
+    "react-redux": "5.1.0",
+    "redux": "4.0.1",
+    "redux-logger": "3.0.6",
+    "reselect": "4.0.0",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
+    "webpack": "4.25.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10"
   }
 }
