--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack --mode development --watch",
     "dev": "webpack-dev-server --color --mode development --open --hot",
     "build": "webpack --mode production",
-    "deploy": "npm run build && surge dist baseball-roster.surge.sh"
+    "deploy": "npm run build && surge dist congame.surge.sh"
   },
   "dependencies": {
     "axios": "0.18.0",
